# a_stock_sentiment_system

./: .gitignore  1.py  Data_Structure.md  README.md  check_trades.py  dragon_pools.json  main.py  pyproject.toml  requirements.txt  run_backtest.py  run_batch.py  run_manager.py  run_web.py  scheduler.py  test.ipynb  test_excel_output.py  timing_cheatsheet.md
.git-rewrite/: backup-refs  commit  heads  index  parse  raw-refs  revs
.history/: 1_20260326222959.py  1_20260326223050.py  1_20260326223101.py  1_20260326223135.py  README_20260322231253.md  README_20260325122807.md  main_20260324221837.py  main_20260324221859.py  main_20260324222306.py  main_20260324231046.py  main_20260324231104.py  main_20260324231124.py  main_20260324231213.py  main_20260324234109.py  main_20260324234125.py  main_20260324234212.py  main_20260325120752.py  main_20260326230320.py  main_20260326230330.py  main_20260326230351.py  main_20260326230411.py  main_20260329182830.py  main_20260329225756.py
backtest/: __init__.py  attribution.py  backtest_engine.py  entry_mode_comparison.py  lhb_comparison.py  matching_rules.py  minute_entry.py  monte_carlo.py  performance_analyzer.py  plan_providers.py  plan_source.py  point_in_time.py  replay_engine.py  strategy_stats.py  trade_calendar.py  trade_simulator.py  walk_forward.py
config/: auction_confirm.yaml  confidence_rules.yaml  config_loader.py  config_registry.py  emotion_cycle_config.yaml  overrides.py  param_docs.py  pattern_params.py  risk_control.yaml  screening_profiles.yaml  sector_tracker_config.yaml  settings.py
core/: __init__.py  data_manager.py  exceptions.py  execution_engine.py  industry_mapper.py  pattern_recognition.py  report_generator.py  retail_trader_support.py  sector_heat_calculator.py  sentiment_engine.py  strategy_engine.py  trade_date_manager.py
data/: Industry_Mapping.csv  trade_calendar.csv
desktop/: __init__.py  backtest.py  manager.py  runner.py  status.py
docs/: ETL化数据与因子指标体系设计.md  architecture_design.md  refactor_plan_decouple_factors_confidence.md  refactor_plan_emotion_cycle_cohort.md  wechat_publish_guide.md  运营手册.md  项目逻辑梳理与实时功能设计.md
examples/: demo_usage.py  emotion_cycle_example.py  execution_usage.py
kb/: __init__.py  brief.py  chunker.py  embeddings.py  ingest.py  llm_client.py  qa.py  retriever.py  store.py  tools.py  winrate.py
output/: A股情绪分析报告_20260322.xlsx  A股情绪分析报告_20260324_225000.xlsx  A股情绪分析报告_20260324_231145.xlsx  A股情绪分析报告_20260324_231229.xlsx  A股情绪分析报告_20260324_234227.xlsx  (+157 more)
recap/: tts.py  (+6 more)
(+1203 files in other folders)
